--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^2.2.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "http": "^0.0.1-security",
     "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10"
   }
